# riichi-mahjong-scorer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  riichi-mahjong-scorer.sln
src/: CMakeLists.txt  all-green-recognizer.cpp  all-green-recognizer.h  doubling-factor-counter.cpp  doubling-factor-counter.h  doubling-factor-report.h  doubling-factor-table.cpp  doubling-factor-table.h  dragons-recognizer.cpp  dragons-recognizer.h  flush-recognizer.cpp  flush-recognizer.h  hand-computer.cpp  hand-computer.h  hand-define.h  hand-recognizer.cpp  hand-recognizer.h  identical-sequences-recognizer.cpp  identical-sequences-recognizer.h  kitchen-sink-recognizer.cpp  kitchen-sink-recognizer.h  meld.cpp  meld.h  minipoint-counter.cpp  minipoint-counter.h  no-points-hand-recognizer.cpp  no-points-hand-recognizer.h  pair.cpp  pair.h  pattern-computer.cpp  pattern-computer.h  pattern-define.h  pattern-functor.cpp  pattern-functor.h  pattern-recognizer.cpp  pattern-recognizer.h  player-hand.cpp  player-hand.h  riichi-mahjong-scorer.vcxproj  riichi-mahjong-scorer.vcxproj.filters  (+31 more)
test/: CMakeLists.txt  MyOwnNewMacros.h  doublingfactorcounter_test.cpp  main.cpp  minipointcounter_test.cpp  playerhand_test.cpp  riichi-mahjong-scorer-tests.vcxproj  riichi-mahjong-scorer-tests.vcxproj.filters  scoringtable_test.cpp  wininghandcounter_test.cpp  winingstate_test.cpp
